started to implement skills -- commented out for next public release

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <title>Drew R. Goodman | Full Stack Developer</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
     <script src="scripts/portfolio.js"></script>
     <script src="scripts/nav.js"></script>
@@ -35,12 +36,13 @@
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="styles/resume.css">
+    <link rel="stylesheet" href="styles/skills.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/lightbox.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/sidebar.css">
     <link rel="stylesheet" href="styles/media.css">
-    <link rel="stylesheet" href="styles/resume.css">
 </head>
 
 <body>
@@ -113,12 +115,39 @@
                     </div>
                 </div>
             </div>
-            <div class="page-content" id="skills">
+            <!-- <div class="page-content" id="skills">
                 <h3>My Skills</h3>
-            </div>
-            <div class="page-content" id="portfolio-client">
+                <i class="devicon-python-plain-wordmark colored"></i>
+                <i class="devicon-css3-plain-wordmark colored"></i>
+                <i class="devicon-django-plain colored"></i>
+                <i class="devicon-mysql-plain-wordmark colored"></i>
+                <i class="devicon-react-original-wordmark colored"></i>
+                <i class="devicon-javascript-plain colored"></i>
+                <i class="devicon-jquery-plain-wordmark colored"></i>
+                <i class="devicon-html5-plain-wordmark colored"></i>
+                <i class="devicon-mongodb-plain-wordmark colored"></i>
+                <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+                <i class="devicon-bootstrap-plain-wordmark colored"></i>
+                <i class="devicon-github-plain-wordmark colored"></i>
+                <i class="devicon-heroku-plain-wordmark colored"></i>
+                <i class="devicon-slack-plain-wordmark colored"></i>
+                <i class="devicon-visualstudio-plain-wordmark colored"></i>
+                <i class="devicon-wordpress-plain-wordmark colored"></i>
+            </div> -->
+
+
+                <!-- <div class="skill-card">
+                    <div class="skill-icon">
+                        <i class="devicon-amazonwebservices-original colored"></i>
+
+                    </div>
+                    <div class="skill-text">
+                        Amazon Web Services
+                    </div>
+                </div> -->
+            <!-- <div class="page-content" id="portfolio-client">
                 <h3>Professional Projects</h3>
-            </div>
+            </div> -->
             <div class="page-content" id="portfolio-personal">
                 <h3>Personal Projects</h3>
                 <div id="projects-container">
@@ -145,7 +174,7 @@
                             <a href='download/drgoodman_resume.pdf' download>
                                 <div class="resume-btn">
                                     <i class="fas fa-download"></i>
-                                    Download *.pdf (40kb)
+                                    Download *.pdf (295kb)
                                 </div>
                             </a>
                         </div>
@@ -162,13 +191,13 @@
                             <a href='download/drgoodman_resume.docx' download>
                                 <div class="resume-btn">
                                     <i class="fas fa-download"></i>
-                                    Download *.docx (40kb)
+                                    Download *.docx (17kb)
                                 </div>
                             </a>
                             <a href='download/drgoodman_resume.doc' download>
                                 <div class="resume-btn">
                                     <i class="fas fa-download"></i>
-                                    Download *.doc (40kb)
+                                    Download *.doc (38kb)
                                 </div>
                             </a>
                         </div>
