minor text tweak for current live version

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h3>Professional Projects</h3>
             </div> -->
             <div class="page-content" id="portfolio-personal">
-                <h3>Personal Projects</h3>
+                <h3>Recent Projects</h3>
                 <div id="projects-container">
                 </div>
             </div>
