updated email / resumes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <i class="fab fa-linkedin-in"></i></a>
                 <a class="contact-link" href='https://github.com/drewgoodman' target="_blank"><i
                         class="fab fa-github"></i></a>
-                <a class="contact-link" href='mailto:drg6525@yahoo.com'><i class="fas fa-envelope"></i></a>
+                <a class="contact-link" href='mailto:drewgoodmanPDX@gmail.com'><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
@@ -174,7 +174,7 @@
                             <a href='download/drgoodman_resume.pdf' download>
                                 <div class="resume-btn">
                                     <i class="fas fa-download"></i>
-                                    Download *.pdf (295kb)
+                                    Download *.pdf (299kb)
                                 </div>
                             </a>
                         </div>
@@ -191,13 +191,13 @@
                             <a href='download/drgoodman_resume.docx' download>
                                 <div class="resume-btn">
                                     <i class="fas fa-download"></i>
-                                    Download *.docx (17kb)
+                                    Download *.docx (18kb)
                                 </div>
                             </a>
                             <a href='download/drgoodman_resume.doc' download>
                                 <div class="resume-btn">
                                     <i class="fas fa-download"></i>
-                                    Download *.doc (38kb)
+                                    Download *.doc (39kb)
                                 </div>
                             </a>
                         </div>
