added data for new projects

--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
                         Amazon Web Services
                     </div>
                 </div> -->
-            <!-- <div class="page-content" id="portfolio-client">
-                <h3>Professional Projects</h3>
-            </div> -->
+            <div class="page-content" id="portfolio-client">
+                <h3>Currently Working On</h3>
+                <div id="client-projects-container">
+                </div>
+            </div>
             <div class="page-content" id="portfolio-personal">
                 <h3>Recent Projects</h3>
                 <div id="projects-container">
@@ -204,19 +206,29 @@
                     </div>
                 </div>
             </div>
-            <!-- <div id="contact" class="page-content">
-                <center><h3>Want to get in touch?</h3></center>
+            <div id="contact" class="page-content">
+                <h3>Want to get in touch?</h3>
                 <div class="two-column">
                     <div class="column">
                         <p>Thanks for visiting! If you see something you're interested in or have any questions, feel
-                            free to contact me via <b>LinkedIn</b> or by <b>e-mail</b>. Please use one of the links before or fill out the contact form and I will respond to you as soon as I can.</p>
+                            free to contact me via <b>LinkedIn</b> or by <b>e-mail</b> and I will respond to you as soon as I can.</p>
                         <p>I am currently looking for <b>internship</b> or <b>entry level</b> opportunities.</p>
+                    </div>
+                    <div class="column">
+                        <div class="form">
+
+                        </div>
                     </div>
 
                 </div>
-            </div> -->
+            </div>
             <div class="page-footer">
-                &copy; 2020 Drew Goodman &#124; All rights reserved
+                <div>
+                    Page hosted by <a href="https://pages.github.com/">GitHub Pages</a>. View the code repo for this site <a href="https://github.com/drewgoodman/drewgoodman.github.io">here</a>.
+                </div>
+                <div>
+                    &copy; 2020 Drew Goodman &#124; All rights reserved
+                </div>
             </div>
         </div>
     </div>
