new skill card style

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="page-content" id="skills">
+            <div class="page-content" id="skills">
                 <h3>My Skills</h3>
-                <i class="devicon-python-plain-wordmark colored"></i>
+                <!-- <i class="devicon-python-plain colored"></i>
                 <i class="devicon-css3-plain-wordmark colored"></i>
                 <i class="devicon-django-plain colored"></i>
                 <i class="devicon-mysql-plain-wordmark colored"></i>
@@ -132,19 +132,38 @@
                 <i class="devicon-heroku-plain-wordmark colored"></i>
                 <i class="devicon-slack-plain-wordmark colored"></i>
                 <i class="devicon-visualstudio-plain-wordmark colored"></i>
-                <i class="devicon-wordpress-plain-wordmark colored"></i>
-            </div> -->
+                <i class="devicon-wordpress-plain-wordmark colored"></i> -->
 
-
-                <!-- <div class="skill-card">
-                    <div class="skill-icon">
-                        <i class="devicon-amazonwebservices-original colored"></i>
-
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="devicon-amazonwebservices-original colored"></i>
+                        </div>
+                        <div class="skill-text">
+                            Amazon Web Services
+                        </div>
                     </div>
-                    <div class="skill-text">
-                        Amazon Web Services
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="devicon-amazonwebservices-original colored"></i>
+                        </div>
+                        <div class="skill-text">
+                            Amazon Web Services
+                        </div>
                     </div>
-                </div> -->
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <i class="devicon-amazonwebservices-original colored"></i>
+                        </div>
+                        <div class="skill-text">
+                            Amazon Web Services
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
             <div class="page-content" id="portfolio-client">
                 <h3>Currently Working On</h3>
                 <div id="client-projects-container">
