--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
     <script src="https://kit.fontawesome.com/d58eb19ed0.js"></script>
     <script src="scripts/portfolio.js"></script>
+    <script src="scripts/skills.js"></script>
     <script src="scripts/nav.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald|Special+Elite|Share+Tech+Mono|Roboto&display=swap"
         rel="stylesheet" />
@@ -135,30 +136,6 @@
                 <i class="devicon-wordpress-plain-wordmark colored"></i> -->
 
                 <div class="skills-grid">
-                    <div class="skill-card">
-                        <div class="skill-icon">
-                            <i class="devicon-amazonwebservices-original colored"></i>
-                        </div>
-                        <div class="skill-text">
-                            Amazon Web Services
-                        </div>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">
-                            <i class="devicon-amazonwebservices-original colored"></i>
-                        </div>
-                        <div class="skill-text">
-                            Amazon Web Services
-                        </div>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">
-                            <i class="devicon-amazonwebservices-original colored"></i>
-                        </div>
-                        <div class="skill-text">
-                            Amazon Web Services
-                        </div>
-                    </div>
 
                 </div>
 
