added navbar link / divided into language tool and framework sections

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </div>
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
+            <a class="profile-link" href='#skills'><i class="fas fa-tools"></i>My Skills</a>
             <a class="profile-link" href='#portfolio-personal'><i class="fas fa-laptop-code"></i>Portfolio</a>
             <a class="profile-link" href='#resume'><i class="fas fa-paperclip"></i>Resume</a>
         </div>
@@ -117,30 +118,24 @@
                 </div>
             </div>
             <div class="page-content" id="skills">
-                <h3>My Skills</h3>
-                <!-- <i class="devicon-python-plain colored"></i>
-                <i class="devicon-css3-plain-wordmark colored"></i>
-                <i class="devicon-django-plain colored"></i>
-                <i class="devicon-mysql-plain-wordmark colored"></i>
-                <i class="devicon-react-original-wordmark colored"></i>
-                <i class="devicon-javascript-plain colored"></i>
-                <i class="devicon-jquery-plain-wordmark colored"></i>
-                <i class="devicon-html5-plain-wordmark colored"></i>
-                <i class="devicon-mongodb-plain-wordmark colored"></i>
-                <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
-                <i class="devicon-bootstrap-plain-wordmark colored"></i>
-                <i class="devicon-github-plain-wordmark colored"></i>
-                <i class="devicon-heroku-plain-wordmark colored"></i>
-                <i class="devicon-slack-plain-wordmark colored"></i>
-                <i class="devicon-visualstudio-plain-wordmark colored"></i>
-                <i class="devicon-wordpress-plain-wordmark colored"></i> -->
+                <h3>My Languages</h3>
 
-                <div class="skills-grid">
-
+                <div class="skills-grid" id="skills-language">
                 </div>
-
-
             </div>
+            <div class="page-content">
+                <h3>Frameworks I Know</h3>
+
+                <div class="skills-grid" id="skills-framework">
+                </div>
+            </div>
+            <div class="page-content" id="skills">
+                <h3>Tools I Use</h3>
+
+                <div class="skills-grid" id="skills-tool">
+                </div>
+            </div>
+
             <div class="page-content" id="portfolio-client">
                 <h3>Currently Working On</h3>
                 <div id="client-projects-container">
