added client icon badge to project cards

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                         <h2>I'm a Full Stack Web Developer.</h2>
                     </div>
                     <div class="home-buttons">
+                        <a class="home-btn" href="#skills">Learn more</a>
                         <a id="viewworks-btn" class="home-btn" href="#portfolio-personal">See projects</a>
                         <!-- <a id="getintouch-btn" class="home-btn" href="#contact">Get in touch</a> -->
                     </div>
@@ -137,12 +138,12 @@
             </div>
 
             <div class="page-content" id="portfolio-client">
-                <h3>Currently Working On</h3>
+                <h3>Current Projects</h3>
                 <div id="client-projects-container">
                 </div>
             </div>
             <div class="page-content" id="portfolio-personal">
-                <h3>Recent Projects</h3>
+                <h3>Recent Works</h3>
                 <div id="projects-container">
                 </div>
             </div>
@@ -198,7 +199,7 @@
                 </div>
             </div>
             <div id="contact" class="page-content">
-                <h3>Want to get in touch?</h3>
+                <h3>get in touch?</h3>
                 <div class="two-column">
                     <div class="column">
                         <p>Thanks for visiting! If you see something you're interested in or have any questions, feel
