added under construction notification for in progress works

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="profile-item profile-links profile-text">
             <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a>
-            <a class="profile-link" href='#skills'><i class="fas fa-tools"></i>My Skills</a>
+            <a class="profile-link" href='#skills'><i class="fas fa-toolbox"></i>My Skills</a>
             <a class="profile-link" href='#portfolio-personal'><i class="fas fa-laptop-code"></i>Portfolio</a>
             <a class="profile-link" href='#resume'><i class="fas fa-paperclip"></i>Resume</a>
         </div>
@@ -198,7 +198,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contact" class="page-content">
+            <!-- <div id="contact" class="page-content">
                 <h3>get in touch?</h3>
                 <div class="two-column">
                     <div class="column">
@@ -213,7 +213,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
             <div class="page-footer">
                 <div>
                     Page hosted by <a href="https://pages.github.com/">GitHub Pages</a>. View the code repo for this site <a href="https://github.com/drewgoodman/drewgoodman.github.io">here</a>.
