--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
             </div>
 
             <div class="page-content" id="portfolio-client">
-                <h3>Current Projects</h3>
+                <h3>Company Projects</h3>
                 <div id="client-projects-container">
                 </div>
             </div>
             <div class="page-content" id="portfolio-personal">
-                <h3>Recent Works</h3>
+                <h3>Personal Projects</h3>
                 <div id="projects-container">
                 </div>
             </div>
