--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
             <div class="page-content" id="portfolio-client">
                 <h3>Company Projects</h3>
-                <div id="client-projects-container">
+                <div class="projects-wrapper"  id="client-projects-container">
                 </div>
             </div>
             <div class="page-content" id="portfolio-personal">
                 <h3>Personal Projects</h3>
-                <div id="projects-container">
+                <div class="projects-wrapper" id="projects-container">
                 </div>
             </div>
             <div class="page-content" id="resume">
