--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
 
             <div class="page-content" id="portfolio-client">
-                <h3>Company Projects</h3>
+                <h3>Client Projects</h3>
                 <div class="projects-wrapper"  id="client-projects-container">
                 </div>
             </div>
