--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <div class="profile-title profile-text">
             <div class="profile-name">Drew R. Goodman //</div>
             <div class="profile-job"> Full Stack Developer</div>
-            <div class="profile-desc">Junior developer from Portland, Oregon passionate about UX, application design,
-                and debugging. Currently experienced with React.js, jQuery, Python, and SQL databases.</div>
+            <div class="profile-desc">Software engineer from Portland, Oregon passionate about web application, UX, and game design. Currently experienced with React.js, Django, jQuery, Python, and SQL databases.</div>
         </div>
         <div class="profile-item profile-links profile-text">
             <!-- <a class="profile-link" href='#home'><i class="fas fa-home"></i>Home</a> -->
