added portfolio desc to projects

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
 
             <div class="page-content" id="portfolio-client">
-                <h3>Client Projects</h3>
+                <h3>Client Work</h3>
                 <div class="projects-wrapper"  id="client-projects-container">
                 </div>
             </div>
