added preloader to site

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
     <div id="menu-toggle" class="nav-btn">
         <span class="line top"></span>
         <span class="line middle"></span>
@@ -214,5 +215,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
