dynamic year updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Drew Goodman | Full Stack Developer" />
     <meta prefix="og: http://ogp.me/ns#" property="og:description"
-        content="My portfolio site, featuring works in React.js, jQuery, Python, and SCSS." />
+        content="My portfolio site, featuring works in React.js, jQuery, Python, Django and SCSS." />
     <meta prefix="og: http://ogp.me/ns#" property="og:image"
         content="https://drewgoodman.github.io/static/images/meta_img.jpg" />
     <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://drewgoodman.github.io" />
@@ -209,12 +209,11 @@
                     site <a href="https://github.com/drewgoodman/drewgoodman.github.io">here</a>.
                 </div>
                 <div>
-                    &copy; 2020 Drew Goodman &#124; All rights reserved
+                    &copy; <span id="current-year"></span> Drew Goodman &#124; All rights reserved
                 </div>
             </div>
         </div>
     </div>
 </body>
-
 
 </html>
